[package]
name = "plot_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.4.6", features = ["full"] }
plotters = "0.3.4"
serde_json = "1.0.93"
tokio-postgres = "0.7.7"
