[package]
name = "plot_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = "0.7.7"
warp = "0.3.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.4"
