[package]
name = "plot_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-postgres = "0.7.7"
warp = "0.3.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
plotters = "0.3.4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
